<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_view_height"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="@dimen/card_title_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="@dimen/card_part_margin"
                    android:singleLine="true"
                    android:text="@string/card_title_text"
                    android:textSize="@dimen/card_title_text_size" />

                <TextView
                    android:id="@+id/author"
                    android:layout_width="@dimen/card_author_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/card_part_margin"
                    android:gravity="center_vertical|left"
                    android:text="@string/card_author_text"
                    android:textSize="@dimen/card_author_text_size" />
            </RelativeLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_part_margin"
                    android:text="@string/card_time_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/time"
                    android:layout_margin="@dimen/card_part_margin"
                    android:singleLine="false"
                    android:text="@string/card_detail"
                    android:textSize="@dimen/card_detail_text_size" />
            </RelativeLayout>
        </FrameLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="@dimen/card_delete_button_width"
        android:layout_height="@dimen/card_delete_button_height"
        android:layout_gravity="right|top"
        android:layout_margin="@dimen/card_part_margin"
        android:background="#ffff"
        android:elevation="0dp"
        android:src="@mipmap/ic_menu_grey600_48dp" />

</android.support.v7.widget.CardView>