<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collTollbarlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="@color/primary"
            app:expandedTitleMarginStart="80dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/test_img"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/centerToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/centerTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/card_part_margin"
                    android:singleLine="true"
                    android:text="@string/card_title_text"
                    android:textSize="@dimen/card_title_text_size" />

                <TextView
                    android:id="@+id/centerAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/centerTitle"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/card_part_margin"
                    android:singleLine="true"
                    android:text="@string/card_author_text"
                    android:textSize="@dimen/card_author_text_size" />

                <TextView
                    android:id="@+id/centerTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/centerTitle"
                    android:layout_margin="@dimen/card_part_margin"
                    android:singleLine="false"
                    android:text="@string/card_time_text" />

                <TextView
                    android:id="@+id/centerDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/centerTime"
                    android:layout_margin="@dimen/card_part_margin"
                    android:text="@string/card_detail"
                    android:textSize="@dimen/card_detail_text_size" />

            </RelativeLayout>

            <SurfaceView
                android:id="@+id/centerSurface"
                android:layout_width="match_parent"
                android:layout_height="@dimen/surface_view_coordinate_show_height" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/centerFabShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@mipmap/ic_share_white_48dp"
        app:rippleColor="@color/colorControlHighlight" />

</android.support.design.widget.CoordinatorLayout>